--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: Platane/snk@master
         id: snake-gif
         with:
-          github_user_name: anastan588
+          github_user_name: ${{ github.anastan588 }}
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       - uses: crazy-max/ghaction-github-pages@v4.0.0
