--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -11,16 +11,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # Snake Animation
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: generate github-contribution-grid-snake.svg
+      - uses:  Platane/snk/svg-only@v3
         with:
           github_user_name: ${{ github.anastan588 }}
-          svg_out_path: dist/github-contribution-grid-snake.svg
+           outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-light
 
-      - uses: crazy-max/ghaction-github-pages@v4.0.0
+      - name: push github-contribution-grid-snake.svg to the output branch
+        uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
