--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,4 +1,4 @@
-name: Generate Snake
+name: generate animation
 
 on:
   # run automatically every 24 hours
@@ -21,16 +21,20 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
+    
     steps:
-      # Snake Animation
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
       - name: generate github-contribution-grid-snake.svg
-      - uses:  Platane/snk/svg-only@v3
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.anastan588 }}
+          github_user_name: ${{ github.repository_owner }}
           outputs: |
             dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-light
-
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
